--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-import-folder",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Point to a folder that contains images and it'll create a JS file with those images imported, and an array of objects for those images (including the image itself, and the filename).",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,14 @@
     "url": "git@github:oscadev/react-import-folder.git"
   },
   "keywords": [
-    "react"
+    "react",
+    "import",
+    "automatically",
+    "images",
+    "folder",
+    "recursively",
+    "image",
+    "cli"
   ],
   "author": "oscadev",
   "license": "MIT",
